# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.day_template/: foo.py  foo_test.py
2021/: README.md
day01/: README.md  calorie_counting.py  calorie_counting_test.py  trebuchet.py  trebuchet_test.py
day02/: README.md  cube.py  cube_test.py  rock_paper_scissors.py  rock_paper_scissors_test.py
day03/: README.md  binary_diagnostic_test.py  engine.py  rucksack_reorganization.py  rucksack_reorganization_test.py
day04/: README.md  bingo.py  bingo_test.py  camp_cleanup.py
day06/: README.md  lanternfish.py  lanternfish_test.py
day07/: README.md  crab_alignment.py  crab_alignment_test.py  device_space.py
day08/: README.md  digit_segments.py  digit_segments_test.py  tree_house_test.py
day09/: README.md  height_map.py  height_map_test.py  rope_bridge.py  rope_bridge_test.py
day1/: README.md  sonar_sweep.py  sonar_sweep_test.py
day10/: README.md  syntax_scoring.py  syntax_scoring_test.py
day11/: README.md  octopus_cavern.py  octopus_cavern_test.py
day12/: README.md  path_finder.py  path_finder_test.py
day13/: paper_fold.py  paper_fold_test.py
day14/: polymer_insertion.py  polymer_insertion_test.py
day15/: lowest_risk.py  lowest_risk_test.py
day16/: README.md  binary_decoder.py  binary_decoder_test.py
day17/: README.md  probe_trajectory.py  probe_trajectory_test.py
day18/: README.md  snailfish_numbers.py
day19/: README.md  beacons_scanners.py  beacons_scanners_test.py
day2/: README.md  submarine.py  (+1 more)
(+73 files in other folders)
