[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Advent of Code solutions 2021"
authors = ["Pranas Ziaukas <pranas@ziaukas.lt>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
