[tool.poetry]
name = "advent-of-code-2021"
version = "0.21.0"
description = "Advent of Code solutions 2021"
authors = ["Pranas Ziaukas <pranas@ziaukas.lt>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
