[tool.poetry]
name = "advent-of-code"
version = "2022.04.0"
description = "Advent of Code solutions"
authors = ["Pranas Ziaukas <pranas@ziaukas.lt>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
advent-of-code-data = "^1.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
